@@ -1,6 +1,6 @@
 package com.example.Medinexus.Security;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.context.annotation.Bean;
@@ -74,7 +74,6 @@ public class WebSecurityConfig {
         .authorizeHttpRequests(auth -> auth
           .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
           .requestMatchers("/api/auth/**").permitAll()
-          .requestMatchers("/api/doctors").permitAll()
           .requestMatchers("/api/test/**").permitAll()
           .requestMatchers(
               "/v2/api-docs",       // Swagger v2 API docs
@@ -96,15 +95,15 @@ public class WebSecurityConfig {
   @Bean
   public CorsConfigurationSource corsConfigurationSource() {
       CorsConfiguration configuration = new CorsConfiguration();
-      configuration.setAllowedOrigins(List.of("*"));
-      configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-      configuration.setAllowedHeaders(List.of("*"));
+      configuration.setAllowedOrigins(Arrays.asList("http://localhost:5173"));
+      configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+      configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type"));
+      configuration.setExposedHeaders(Arrays.asList("Authorization"));
       configuration.setAllowCredentials(true);
-
       UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
       source.registerCorsConfiguration("/**", configuration);
       return source;
-  }
+    }
 
     //In Memory Authentication
     // @Bean
